<resources>
    <string name="app_name">Healthy Eating</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">376054973152168</string>
    <string name="fb_login_protocol_scheme">fb376054973152168</string>
    <string name="scd">SCD</string>
    <string name="glutenFree">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="home">Home</string>
    <string name="preferences">Preferences</string>
    <string name="logOut">Log Out</string>
    <string name="savePreferences">Save Preferences</string>
    <string name="allergicToNuts">Allergic To Nuts</string>
    <string name="lactoseIntolerant">Lactose Intolerant</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Preferences</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

</resources>
